# joker-test

./: .gitignore  AGENTS.md  CLAUDE.md  DESIGN.md  LICENSE  README.md  charter_gen.py  pyproject.toml
docs/roadmap/: iteration-roadmap.md  spd-e2e-report-2026-07-14-v2.md  spd-e2e-report-2026-07-14.md  spd-trace-improvement-plan.md
docs/superpowers/plans/: 2026-07-09-explore-pipeline.md  2026-07-10-llm-explorer-rewrite.md  2026-07-13-agent-plugin.md  2026-07-14-conversation-structure.md  2026-07-14-ocr-prompt-and-early-stop.md  2026-07-20-macos-compat.md
docs/superpowers/specs/: 2026-07-09-explore-pipeline-design.md  2026-07-10-llm-explorer-rewrite-design.md  2026-07-10-llm-layer-simplify.md  2026-07-13-agent-plugin-design.md  2026-07-14-conversation-structure-design.md  2026-07-20-macos-compat-design.md
examples/: game_metadata.json  spd_game_metadata.json  spd_targets.json  targets.json
examples/e2e_launch_quit/: game_metadata.json
scripts/: e2e_formal.py  e2e_launch_quit.py  e2e_spd_explore_conversation.py  e2e_spd_full_real.py  e2e_spd_real.py  e2e_traced.py  start_spd_mac.sh  verify_spd_record_e2e.py
src/joker_test/: __init__.py  charter_gen.py  cli.py  config.py  reflection.py  runner.py  trace.py
src/joker_test/executor/: __init__.py  base.py  coords.py  window.py
src/joker_test/executor/backends/: __init__.py  factory.py
src/joker_test/executor/backends/airtest/: __init__.py  backend.py  state.py
src/joker_test/executor/backends/fake/: __init__.py  backend.py
src/joker_test/executor/backends/mac/: __init__.py  _quartz.py  backend.py  state.py
src/joker_test/explorer/: __init__.py  agent_strategy.py  agent_tools.py  conversation_strategy.py  detection.py  explorer.py  llm_explorer.py  react_strategy.py  strategy.py  types.py
src/joker_test/flow/: __init__.py  generator.py  namer.py  recorder.py  semantics.py  types.py  verifier.py
src/joker_test/generator/: __init__.py  generator.py  quality.py  types.py
src/joker_test/llm/: __init__.py  base.py
src/joker_test/llm/providers/: __init__.py  tracing.py
src/joker_test/llm/providers/anthropic/: __init__.py
src/joker_test/llm/providers/bedrock/: __init__.py
src/joker_test/llm/providers/glm/: __init__.py
src/joker_test/llm/providers/mimo/: __init__.py
src/joker_test/llm/providers/mock/: __init__.py
src/joker_test/ocr/: __init__.py  base.py
src/joker_test/ocr/providers/: __init__.py
src/joker_test/ocr/providers/rapidocr/: __init__.py
src/joker_test/perception/: __init__.py  base.py
src/joker_test/perception/matching/: __init__.py  image_matcher.py
src/joker_test/perception/matching/_aircv/: __init__.py  _confidence.py  _errors.py  _multiscale_matching.py  _template_matching.py  _utils.py
src/joker_test/pipeline/: __init__.py  base.py  types.py
src/joker_test/pipeline/stages/: __init__.py  execute.py  explore.py  reflect.py  report.py  solidify.py
src/joker_test/plugins/: __init__.py  base.py  loader.py  manager.py
src/joker_test/plugins/ocr/: __init__.py
src/joker_test/prompts/: __init__.py  loader.py
src/joker_test/prompts/constants/: agent_system.md  analyst_checklist.md  bug_definition.md  exploration_system.md  ocr_format.md  smoke_quality_rules.md  ui_interaction.md
src/joker_test/prompts/data/: heuristics.yaml  personas.yaml
src/joker_test/prompts/templates/: analyst.md.j2  architect.md.j2  charter_schema.md  recorded_flow.md.j2  smoke_test.md.j2
src/joker_test/reporters/: __init__.py  base.py  explore.py
src/joker_test/reporters/html/: __init__.py
src/joker_test/reporters/json/: __init__.py
src/joker_test/reporters/multi/: __init__.py
tests/: __init__.py  conftest.py  test_agent_strategy.py  test_agent_tools.py  test_anthropic_provider.py  test_backends_fake.py  test_backends_mac.py  test_charter_gen_mock.py  test_config.py  test_conversation_strategy.py  test_executor_swipe.py  test_explore_strategy.py  test_explorer.py  test_factory.py  test_flow.py  test_generator.py  test_image_matcher.py  test_llm_explorer.py  test_ocr.py  test_ocr_plugin.py  test_perception.py  test_pipeline_execute.py  test_pipeline_explore.py  test_pipeline_orchestrator.py  test_pipeline_reflect.py  test_pipeline_report.py  test_pipeline_solidify.py  test_pipeline_types.py  test_plugin_manager.py  test_prompts_loader.py  test_quartz_input.py  test_quartz_mac.py  test_react_strategy.py  test_reflection.py  test_runner.py  test_trace.py  test_window.py
tests/real/: __init__.py  test_launch_quit_real.py
tests/smoke/: conftest.py  test_smoke_sample.py
